--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -5,7 +5,7 @@ body {
   background-color: #f0f0f0;
 }
 
-header {
+nav {
   background-color: #003366;
   color: white;
   padding: 10px 0;
@@ -19,10 +19,6 @@ header {
   padding: 0 20px;
 }
 
-.contact-info p {
-  margin: 0;
-}
-
 .buttons button {
   background-color: #ff9900;
   border: none;
@@ -34,8 +30,9 @@ header {
 }
 
 main {
-  background-image: url('marble-background.jpg'); /* Replace with actual image path */
+  background-image: url('../images/wood_texture.jpg');
   background-size: cover;
+  background-color: #003366;
   padding: 20px;
 }
 
@@ -44,6 +41,7 @@ main {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-radius: 10px;
+  
 }
 
 .service-info h2 {
@@ -62,4 +60,9 @@ main {
   max-width: 200px;
   margin: 10px auto;
   border-radius: 25px;
+}
+
+a {
+  color: white;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
